[project]
name = "nexus-3d-faceavatar-worker"
version = "0.1.0"
description = "Arc2Avatar identity-head + FLAME face-graft worker for nexus.3d.faceavatar. Stdio JSON-RPC. FLAME + ArcFace single-photo identity head, FLAME→base-mesh graft. fake (no-GPU) mode for CI; gb10 (GB10/Blackwell sm_121) real path is GPU-deferred. Non-commercial model license (FLAME/Arc2Avatar)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

# Base deps cover the torch-free `fake` backend (pure-stdlib GLB + JSON-RPC).
# The real torch/identity/rasteriser stack lives in the [arc2avatar]/[rasterizer]
# extras below (GPU-deferred — see spec §8).
dependencies = [
  "pillow>=10.0",
  "numpy>=1.26,<3.0",
  "huggingface_hub>=0.26",
]

[project.optional-dependencies]
# Proven GB10 Arc2Avatar stack (validated 2026-06-30): Arc2Face SD pipeline +
# insightface (ArcFace) + the splat->mesh path. xformers dropped (SDPA default).
arc2avatar = [
  "diffusers==0.31.0",
  "transformers==4.46.3",
  "peft>=0.13",
  "accelerate>=0.34",
  "safetensors>=0.4",
  "huggingface_hub>=0.26,<1.0",
  "insightface>=0.7",
  "onnxruntime>=1.18",
  "matplotlib>=3.8",
  "opencv-python-headless>=4.10",
  "scipy>=1.13",
  "einops>=0.8",
  "kornia>=0.7",
  "trimesh>=4.4",
  "plyfile>=1.0",
  "imageio>=2.37",
  "tqdm>=4.66",
  "yacs>=0.1.8",
  "fire>=0.5",
  "dacite>=1.8",
  "pyyaml>=6.0",
  "setuptools>=70",
  "wheel>=0.43",
  "ninja>=1.11",
]
# Differentiable Gaussian rasteriser + KNN (vendored sm_121 wheels, GB10 only).
rasterizer = [
  "torch>=2.12",
  "torchvision>=0.27",
  "diff_gaussian_rasterization ; sys_platform == 'linux' and platform_machine == 'aarch64'",
  "simple_knn ; sys_platform == 'linux' and platform_machine == 'aarch64'",
]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pyyaml>=6.0",
]

[project.scripts]
nexus-3d-faceavatar-worker = "faceavatar_worker.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Vendored Arc2Avatar method code (`src/arc2avatar/`) is packaged so `import
# arc2avatar` resolves in the venv. Populated during the GPU spike (gitignored now).
[tool.hatch.build.targets.wheel]
packages = ["src/faceavatar_worker", "src/arc2avatar"]

[tool.hatch.metadata]
allow-direct-references = true

# Vendored aarch64/sm_121 CUDA-ext wheels (built on GB10, torch 2.12/cu132 — the
# YixunLiang diff-gaussian-rasterization fork + simple-knn, patched for GCC14/CUDA13).
[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

# GB10-only real stack: resolve the lock for that env alone.
[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'aarch64'"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu132" }]
torchvision = [{ index = "pytorch-cu132" }]
diff_gaussian_rasterization = [
  { path = "../../../../binaries/linux-aarch64/diff_gaussian_rasterization-0.0.0-cp312-cp312-linux_aarch64.whl", marker = "sys_platform == 'linux' and platform_machine == 'aarch64' and python_version == '3.12'" },
]
simple_knn = [
  { path = "../../../../binaries/linux-aarch64/simple_knn-0.0.0-cp312-cp312-linux_aarch64.whl", marker = "sys_platform == 'linux' and platform_machine == 'aarch64' and python_version == '3.12'" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "smoke: end-to-end smoke tests (require GPU + native kernels)",
]
