[package]
name = "nexus-local-llm-chat-history"
version = "0.1.0"
edition = "2021"
description = "Chat history persistence for the nexus.local-llm extension"
license = "GPL-3.0"

[lib]
name = "nexus_local_llm_chat_history"
path = "src/lib.rs"

[dependencies]
tokio       = { version = "1.48", features = ["rt-multi-thread", "macros", "sync"] }
sqlx        = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
axum        = "0.8"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
tracing     = "0.1"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
nexus-extension = { path = "../../../../crates/nexus-extension" }

[dev-dependencies]
tokio          = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tempfile       = "3"
tower          = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
async-trait    = "0.1"
