[project]
name = "nexus-video-longcat-worker"
version = "0.1.0"
description = "LongCat-Video TI2V render worker for the nexus.video.longcat extension. Stdio JSON-RPC over NDJSON. FP8 e4m3fn scaled (Kijai _KJ.safetensors) + BF16 paths; fake (no-GPU) mode for CI."
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

dependencies = [
  # Stdio protocol + structured logs. Heavy ML deps live in the
  # `diffusers` extra so the `fake` runtime installs in seconds.
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "ffmpeg-python>=0.2",
  "pillow>=10.0",
  "numpy>=1.26,<3.0",
  "huggingface_hub>=0.26",
]

[project.optional-dependencies]
# Real-runtime deps. The fake profile installs only the base set.
diffusers = [
  # RTX 50 Blackwell requires cu128 wheels (torch 2.10+). LongCat
  # upstream pins torch==2.6.0 but that is CPU+cu124 only — we keep
  # the cu128 floor to stay compatible with the existing host GPU
  # contract. The DiT modules are vendored so the upstream torch pin
  # is unenforced.
  "torch>=2.10",
  "torchvision>=0.25",
  "torchaudio>=2.10",
  # LongCat-Video upstream pins diffusers==0.35.1 and
  # transformers==4.41.0 (see meituan-longcat/LongCat-Video
  # requirements.txt). The pins drive UMT5EncoderModel + the
  # FlowMatchEulerDiscreteScheduler API expected by
  # pipeline_longcat_video.py. We honor the upstream pins exactly
  # in our own venv; the ltx23 worker's incompatible pins do not
  # apply here (separate extension, separate uv lock).
  "diffusers==0.35.1",
  "transformers==4.41.0",
  "accelerate>=1.0",
  "safetensors>=0.4",
  "huggingface_hub>=0.26",
  "einops>=0.8",
  "sentencepiece>=0.2",
  "protobuf>=4",
  # Block-Sparse-Attention is upstream-optional. Default attention
  # is flash-attn-2; sdpa works as a fallback when flash-attn is
  # absent. flash-attn 2.7.4.post1 matches the upstream pin.
  # "flash-attn==2.7.4.post1",  # commented: prebuilt wheels are
  # scarce on Windows; defer to runtime-selected sdpa fallback
  # until the install flow can resolve a platform-correct wheel.
  "av>=12.0",
  "imageio>=2.37",
  "imageio-ffmpeg>=0.6",
  "opencv-python-headless>=4.10",
  # ftfy + regex are pulled in by pipeline_longcat_video.py for the
  # T5/UMT5-style prompt cleanup helpers (`fix_text` + `whitespace_clean`).
  "ftfy>=6.2",
  "regex>=2024.0",
  "loguru>=0.7",
  # Triton powers the block-sparse-attention kernels in
  # `longcat_video/block_sparse_attention/bsa_interface.py`. On Linux torch
  # cu128 ships triton transitively; on Windows torch has no triton wheel,
  # so we pin `triton-windows` explicitly. Both are import-time deps even
  # when `enable_bsa=False`, because attention.py imports
  # `block_sparse_attention.bsa_interface` unconditionally at module top.
  "triton>=3.0 ; sys_platform != 'win32'",
  "triton-windows>=3.0 ; sys_platform == 'win32'",
  # xformers 0.0.35 imports on Blackwell but the cutlassF / fa2F kernels
  # are not built for sm_120, so attention falls back to SDPA via our
  # monkey-patch. Keep installed for Ampere/Hopper hosts.
  "xformers>=0.0.35",
  # SageAttention v1 (int8 Triton-based). Works on Blackwell sm_120 via
  # Triton JIT. Quality trade: ~2-4% numerical error vs bf16 SDPA. v2
  # (FP8, GitHub-only) needs `pip install git+https://github.com/thu-ml/SageAttention`
  # — pre-quant kernels with proper Blackwell support but not on PyPI.
  "sageattention>=1.0.6",
]
# TODO(longcat): flash-attn 2.x on Windows for torch 2.11+cu128 — NO clean
# wheel today, AND the closest neighbor (bdashore3 v2.8.3 cu128 torch2.8)
# fails to load on torch 2.11 with "DLL load failed while importing
# flash_attn_2_cuda" (probed 2026-05-24). ABI incompat between torch 2.8
# and 2.11 PyTorch C++ extension symbols.
#
# Other Windows sources:
#   - mjun0812 v0.9.22: 133 assets, zero win_amd64 — Linux aarch64 only
#   - windreamer flash-attention3-wheels: cu128/cu130 + torch 2.11 + win
#     wheels exist BUT FA3 hard-blocks sm_120 (Dao-AILab #1987)
#
# Path to a working FA2 on Blackwell + Windows + torch 2.11:
#   1. Build from source: CUDA 12.8 toolkit + MSVC + Ninja + ~30min compile
#   2. Wait for mjun0812 / bdashore3 to ship a torch-2.11+cu128 win wheel
#   3. Wait for Dao-AILab to land sm_120 support upstream (#1987)
#
# Until one of those: stay on SDPA via _patch_attention_to_use_sdpa.
# SageAttention v1 (Triton-based) is the Blackwell-friendly speed
# alternative; v2 (FP8, GitHub-only) would close the quality gap.
flash_attn = [
  # Linux-only Ampere/Ada/Hopper wheels. Skipped on Windows + on Blackwell.
  "flash-attn>=2.6 ; sys_platform == 'linux'",
]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
nexus-video-longcat-worker = "longcat_video_worker.__main__:cli"
nexus-video-longcat-install = "longcat_video_worker.headless_install:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/longcat_video_worker"]

[tool.hatch.metadata]
allow-direct-references = true

# Route torch wheels through PyTorch's cu128 index for RTX 50 Blackwell.
[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
