[project]
name = "nexus-video-longcat-worker"
version = "0.1.0"
description = "LongCat-Video TI2V render worker for the nexus.video.longcat extension. Stdio JSON-RPC over NDJSON. FP8 e4m3fn scaled (Kijai _KJ.safetensors) + BF16 paths; fake (no-GPU) mode for CI."
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

dependencies = [
  # Stdio protocol + structured logs. Heavy ML deps live in the
  # `diffusers` extra so the `fake` runtime installs in seconds.
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "ffmpeg-python>=0.2",
  "pillow>=10.0",
  "numpy>=1.26,<3.0",
  "huggingface_hub>=0.26",
]

[project.optional-dependencies]
# Real-runtime deps. The fake profile installs only the base set.
diffusers = [
  # RTX 50 Blackwell + CUDA 13.2 path. torch 2.12.0+cu132 is the first
  # PyTorch release w/ proper Blackwell-tuned cuBLAS/cuDNN kernels. cu128
  # rollback tag: `longcat-cu128-stable` (git tag) — revert pyproject +
  # `uv sync --extra diffusers` to restore.
  "torch>=2.12",
  "torchvision>=0.27",
  # torchaudio dropped: cu132 index doesn't ship a Windows wheel for it
  # (max 2.2.0, Linux aarch64 only). LongCat pipeline doesn't import
  # torchaudio directly — diffusers may pull it transitively for some
  # pipelines but the video stack doesn't need it.
  # LongCat-Video upstream pins diffusers==0.35.1 and
  # transformers==4.41.0 (see meituan-longcat/LongCat-Video
  # requirements.txt). The pins drive UMT5EncoderModel + the
  # FlowMatchEulerDiscreteScheduler API expected by
  # pipeline_longcat_video.py. We honor the upstream pins exactly
  # in our own venv; the ltx23 worker's incompatible pins do not
  # apply here (separate extension, separate uv lock).
  "diffusers==0.35.1",
  "transformers==4.41.0",
  "accelerate>=1.0",
  "safetensors>=0.4",
  "huggingface_hub>=0.26",
  "einops>=0.8",
  "sentencepiece>=0.2",
  "protobuf>=4",
  # Block-Sparse-Attention is upstream-optional. Default attention
  # is flash-attn-2; sdpa works as a fallback when flash-attn is
  # absent. flash-attn 2.7.4.post1 matches the upstream pin.
  # "flash-attn==2.7.4.post1",  # commented: prebuilt wheels are
  # scarce on Windows; defer to runtime-selected sdpa fallback
  # until the install flow can resolve a platform-correct wheel.
  "av>=12.0",
  "imageio>=2.37",
  "imageio-ffmpeg>=0.6",
  "opencv-python-headless>=4.10",
  # ftfy + regex are pulled in by pipeline_longcat_video.py for the
  # T5/UMT5-style prompt cleanup helpers (`fix_text` + `whitespace_clean`).
  "ftfy>=6.2",
  "regex>=2024.0",
  "loguru>=0.7",
  # Triton powers the block-sparse-attention kernels in
  # `longcat_video/block_sparse_attention/bsa_interface.py`. On Linux torch
  # cu128 ships triton transitively; on Windows torch has no triton wheel,
  # so we pin `triton-windows` explicitly. Both are import-time deps even
  # when `enable_bsa=False`, because attention.py imports
  # `block_sparse_attention.bsa_interface` unconditionally at module top.
  "triton>=3.0 ; sys_platform != 'win32'",
  "triton-windows>=3.0 ; sys_platform == 'win32'",
  # xformers 0.0.35 imports on Blackwell but the cutlassF / fa2F kernels
  # are not built for sm_120, so attention falls back to SDPA via our
  # monkey-patch. Keep installed for Ampere/Hopper hosts.
  "xformers>=0.0.35",
  # SageAttention v1 (int8 Triton-based). Works on Blackwell sm_120 via
  # Triton JIT. Quality trade: ~2-4% numerical error vs bf16 SDPA. The PyPI
  # 1.0.x release is a pure-Python `py3-none-any` wheel (kernels JIT-compile
  # at runtime), so it installs prebuilt on linux x86_64/aarch64 + win — no
  # vendored wheel needed. Capped <2.0: v2 (FP8, GitHub-only) is not on PyPI
  # and ships an API break.
  "sageattention>=1.0.6,<2.0",
]
# TODO(longcat): flash-attn 2.x on Windows for torch 2.11+cu128 — NO clean
# wheel today, AND the closest neighbor (bdashore3 v2.8.3 cu128 torch2.8)
# fails to load on torch 2.11 with "DLL load failed while importing
# flash_attn_2_cuda" (probed 2026-05-24). ABI incompat between torch 2.8
# and 2.11 PyTorch C++ extension symbols.
#
# Other Windows sources:
#   - mjun0812 v0.9.22: 133 assets, zero win_amd64 — Linux aarch64 only
#   - windreamer flash-attention3-wheels: cu128/cu130 + torch 2.11 + win
#     wheels exist BUT FA3 hard-blocks sm_120 (Dao-AILab #1987)
#
# Path to a working FA2 on Blackwell + Windows + torch 2.11:
#   1. Build from source: CUDA 12.8 toolkit + MSVC + Ninja + ~30min compile
#   2. Wait for mjun0812 / bdashore3 to ship a torch-2.11+cu128 win wheel
#   3. Wait for Dao-AILab to land sm_120 support upstream (#1987)
#
# Until one of those: stay on SDPA via _patch_attention_to_use_sdpa.
# SageAttention v1 (Triton-based) is the Blackwell-friendly speed
# alternative; v2 (FP8, GitHub-only) would close the quality gap.
flash_attn = [
  # Linux-only Ampere/Ada/Hopper wheels. Skipped on Windows + on Blackwell.
  "flash-attn>=2.6 ; sys_platform == 'linux'",
]
# NVIDIA Maxine VFX SDK Python bindings — for post-process upscale via
# `upscale_rtx.py`. Requires the VFX SDK runtime installed on the host
# (Windows: NGC installer; Linux: pre-built libs) plus a Turing-class or
# newer NVIDIA GPU with Tensor Cores. The pip package ships only the
# Python wrapper; the C++/CUDA runtime is a separate install.
#
# NOTE on provenance: `nvidia-vfx==0.1.0.1` IS available on the standard
# PyPI index (verified 2026-05-24), so `uv sync --extra rtx` works
# without configuring NGC as a Python package index. The corresponding
# C++/CUDA *runtime libraries* live on NGC and the NVIDIA developer
# portal — those are a separate Windows installer / Linux tarball and
# are NOT pulled by pip. The pin matches the upstream sample
# requirements.txt at github.com/NVIDIA-Maxine/nvidia-vfx-python-samples
# (HEAD as of 2026-05-24). Bump only after re-verifying the
# `VideoSuperRes` import path remains stable.
rtx = [
  "nvidia-vfx==0.1.0.1",
]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "safetensors>=0.4",
  "jsonschema>=4.21,<5",
]

[project.scripts]
nexus-video-longcat-worker = "longcat_video_worker.__main__:cli"
nexus-video-longcat-install = "longcat_video_worker.headless_install:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/longcat_video_worker"]

[tool.hatch.metadata]
allow-direct-references = true

# Route torch wheels through PyTorch's cu132 index for RTX 50 Blackwell.
[tool.uv.sources]
torch = [{ index = "pytorch-cu132" }]
torchvision = [{ index = "pytorch-cu132" }]
flash-attn = [
  # Prebuilt cp312 wheels from the repo-global binaries/ tree (torch 2.12 /
  # cu132). Replaces the prior source build of `flash-attn>=2.6` on linux.
  # Windows is intentionally excluded — no FA2 wheel loads on Blackwell +
  # torch 2.11/2.12 (see TODO note above the diffusers extra); Windows falls
  # back to SDPA. cp311 linux has no wheel either, so py3.11 linux installs
  # fall back to SDPA as well.
  # linux-amd64 (x86_64)
  { path = "../../../../binaries/linux-amd64/flash_attn-2.8.3+cu132torch2.12-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.12'" },
  # linux-aarch64 (GB10/CUDA13 generic 2.8.3, loads vs torch cu132)
  { path = "../../../../binaries/linux-aarch64/flash_attn-2.8.3-cp312-cp312-linux_aarch64.whl", marker = "sys_platform == 'linux' and platform_machine == 'aarch64' and python_version == '3.12'" },
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "smoke: end-to-end smoke tests (may spawn subprocesses or require external services)",
]
